--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 10vw 0 0 0;
+  font-size: 10vw;
 }
 
 body * {
@@ -48,7 +49,6 @@ body * {
 #fee {
   top: 0;
   position: fixed;
-  font-size: 10vw;
   text-align: center;
   width: 100%;
 }
@@ -67,7 +67,6 @@ body * {
 
 #size span {
   display: block;
-  font-size: 10vw;
   padding: 5vw;
   transition: all 1s;
   text-indent: 20vw;
@@ -96,7 +95,8 @@ body * {
   background-size: contain;
 }
 
-.step1 #size span {
+.step1 #size span,
+.step2 #size span {
   font-size: 8vw;
   text-indent: 13vw;
   max-height: 0;
@@ -107,6 +107,21 @@ body * {
 
 .step1.size1 #size span:nth-child(1),
 .step1.size2 #size span:nth-child(2),
-.step1.size3 #size span:nth-child(3) {
+.step1.size3 #size span:nth-child(3),
+.step2.size1 #size span:nth-child(1),
+.step2.size2 #size span:nth-child(2),
+.step2.size3 #size span:nth-child(3) {
   max-height: 100vh;
+}
+
+#hint1 {
+  overflow: hidden;
+  max-height: 0;
+  transition: all 1s;
+  margin: 5vw;
+}
+
+.step1 #hint1 {
+  max-height: 100vh;
+  background: #ffe;
 }
